--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,13 @@
                     android:layout_height="wrap_content"
                     android:text="Player 2"/>
             </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Score:"
+                android:id="@+id/scoreView"
+                android:layout_gravity="center_horizontal|top" />
         </FrameLayout>
 
         <com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout
