--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -1,5 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:paddingBottom="40dp"
+        android:textSize="30sp"/>
+    <Button
+        android:id="@+id/buttonTrain"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Train"/>
+    <Button
+        android:id="@+id/buttonMultiplayer"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Multiplayer"/>
+    <Button
+        android:id="@+id/buttonSettings"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Settings"/>
 </LinearLayout>
