--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -15,6 +15,6 @@
         android:gravity="center"
         android:padding="10dp"
         android:fontFamily="sans-serif"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#838383"/>
 
 </LinearLayout>
