--- a/app/src/main/res/layout/flashcard.xml
+++ b/app/src/main/res/layout/flashcard.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:gravity="center"
-            android:textColor="#FFFFFF"
+            android:textColor="#838383"
             android:textSize="40sp"
             android:maxLines="1"
             android:ellipsize="none"
