--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -8,21 +8,63 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:paddingBottom="40dp"
+        android:paddingBottom="20dp"
         android:textSize="30sp"/>
     <Button
         android:id="@+id/buttonTrain"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Train"/>
+        android:text="Train"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/buttonMultiplayer"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Multiplayer"/>
+        android:text="Multiplayer"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/buttonSettings"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Settings"/>
+        android:text="Settings"
+        android:visibility="gone"/>
+
+    <TextView
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:clickable="true"
+        android:id="@+id/TextView_StyleButtonTrain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Train"
+        android:textSize="20dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="10dp"
+        android:fontFamily="sans-serif"
+        android:textColor="#383838"
+        android:background="@drawable/stylebutton"/>
+
+
+    <TextView
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:clickable="true"
+        android:id="@+id/TextView_StyleButtonMultiplayer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Multiplayer"
+        android:textSize="20dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="10dp"
+        android:fontFamily="sans-serif"
+        android:textColor="#383838"
+        android:background="@drawable/stylebutton"/>
+
+
 </LinearLayout>
