--- a/app/src/main/res/layout/players_info_single.xml
+++ b/app/src/main/res/layout/players_info_single.xml
@@ -14,11 +14,31 @@ android:paddingTop="10dp">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player 1"/>
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ImageViewPlayer1Avatar"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/avatar"/>
+        <FrameLayout
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center">
+            <View
+                android:id="@+id/viewUserGreenHighlight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/circlegradient_green"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+            <View
+                android:id="@+id/viewUserRedHighlight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/circlegradient_red"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ImageViewPlayer1Avatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/avatar"/>
+        </FrameLayout>
         <TextView
             android:id="@+id/scoreView"
             android:layout_width="wrap_content"
@@ -33,11 +53,30 @@ android:paddingTop="10dp">
         android:layout_gravity="right"
         android:layout_marginRight="20dp"
         android:visibility="gone">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ImageViewPlayer2Avatar"
+        <FrameLayout
             android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/avatar"/>
+            android:layout_height="60dp">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ImageViewPlayer2Avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/avatar"
+                android:layout_gravity="center"/>
+            <View
+                android:id="@+id/viewOpponentGreenHighlight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/circlegradient_green"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+            <View
+                android:id="@+id/viewOpponentRedHighlight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/circlegradient_red"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+        </FrameLayout>
         <TextView
             android:id="@+id/TextViewPlayer2Name"
             android:layout_width="wrap_content"
