--- a/app/src/main/res/drawable/dropshadow.xml
+++ b/app/src/main/res/drawable/dropshadow.xml
@@ -44,7 +44,7 @@
     <!-- Background -->
     <item>
         <shape>
-            <solid android:color="#f7df65" />
+            <solid android:color="#ffd918" />
             <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
                 android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
         </shape>
