--- a/app/src/main/res/layout/cardsetpicker.xml
+++ b/app/src/main/res/layout/cardsetpicker.xml
@@ -12,14 +12,27 @@
         android:textSize="25dip"/>
 
     <EditText
+        android:id="@+id/editTextCardSetPicker"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15dip"/>
 
     <ListView
+        android:id="@+id/listViewCardSetPicker"
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </ListView>
+
+    <Button
+        android:id="@+id/buttonCardSetPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OK"
+        android:visibility="gone"/>
 
 </LinearLayout>
