--- a/app/src/main/res/layout/cardsetpicker_item.xml
+++ b/app/src/main/res/layout/cardsetpicker_item.xml
@@ -4,7 +4,16 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/textViewCardsetPickerItem"
+        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/textViewCardsetSearchAuthor"
+        android:textSize="12sp"
+        android:textColor="#cccccc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"/>
 
 </LinearLayout>
