--- a/app/src/main/res/layout/userprofile.xml
+++ b/app/src/main/res/layout/userprofile.xml
@@ -3,4 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:text="OK"/>
+
 </LinearLayout>
