--- a/app/src/main/res/layout/cardsetpicker_item.xml
+++ b/app/src/main/res/layout/cardsetpicker_item.xml
@@ -8,12 +8,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/textViewCardsetSearchAuthor"
-        android:textSize="12sp"
-        android:textColor="#cccccc"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"/>
+        android:orientation="horizontal"
+        android:gravity="right">
+        <TextView
+            android:id="@+id/textViewCardsetSearchLang"
+            android:textSize="12sp"
+            android:textColor="#cccccc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"/>
+        <TextView
+            android:id="@+id/textViewCardsetSearchLikes"
+            android:textSize="12sp"
+            android:textColor="#cccccc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"/>
+        <TextView
+            android:id="@+id/textViewCardsetSearchAuthor"
+            android:textSize="12sp"
+            android:textColor="#cccccc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"/>
+    </LinearLayout>
+
 
 </LinearLayout>
