--- a/app/src/main/res/layout/fragment_search_cardset.xml
+++ b/app/src/main/res/layout/fragment_search_cardset.xml
@@ -20,12 +20,28 @@
         android:layout_height="wrap_content"
         android:textSize="15dip"/>
 
+    <TextView
+        android:id="@+id/textViewPopularCardsets"
+        android:paddingTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/string_popular_cardsets"
+        android:textSize="18dip"
+        android:visibility="gone"/>
+
+    <ListView
+        android:id="@+id/listViewPopularCardsets"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+    </ListView>
+
     <ListView
         android:id="@+id/listViewCardSetPicker"
         android:layout_margin="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
     </ListView>
 
     <Button
