- Change hard coded values to strings

--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -37,7 +37,7 @@
         android:id="@+id/TextView_StyleButtonTrain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Train"
+        android:text="@string/string_main_menu_train"
         android:textSize="20dp"
         android:layout_gravity="center"
         android:gravity="center"
@@ -56,7 +56,7 @@
         android:id="@+id/TextView_StyleButtonMultiplayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Multiplayer"
+        android:text="@string/string_main_menu_multiplayer"
         android:textSize="20dp"
         android:layout_gravity="center"
         android:gravity="center"
