--- a/app/src/main/res/drawable/stylebutton_shape.xml
+++ b/app/src/main/res/drawable/stylebutton_shape.xml
@@ -4,7 +4,7 @@
         android:radius="40dp"
         />
     <solid
-        android:color="#e9e9e9"
+        android:color="#f5ea0f"
         />
     <padding
         android:left="0dp"
