--- a/app/src/main/res/layout/fragment_players_info_single.xml
+++ b/app/src/main/res/layout/fragment_players_info_single.xml
@@ -13,6 +13,8 @@ android:paddingTop="10dp">
             android:id="@+id/TextViewPlayer1Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#303030"
+            android:textStyle="bold"
             android:text="Player 1"/>
         <FrameLayout
             android:layout_width="50dp"
