--- a/app/src/main/res/layout/fragment_userprofile.xml
+++ b/app/src/main/res/layout/fragment_userprofile.xml
@@ -7,7 +7,8 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageViewAvatar"
         android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:src="@drawable/avatar"/>
 
     <EditText
         android:id="@+id/editTextUserName"
@@ -15,8 +16,9 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="20dp"
+        android:id="@+id/buttonSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="OK"/>
 
 </LinearLayout>
