--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorGreen">#6cf15a</color>
     <color name="colorRed">#e7725a</color>
     <color name="colorBlack">#434343</color>
+    <color name="colorSelected">#c9c9c9</color>
 </resources>
