--- a/app/src/main/res/layout/fragment_search_cardset.xml
+++ b/app/src/main/res/layout/fragment_search_cardset.xml
@@ -20,6 +20,22 @@
         android:layout_height="wrap_content"
         android:textSize="15dip"/>
 
+    <ScrollView
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+        <LinearLayout
+            android:id="@+id/linearLayoutTags"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+
+    </ScrollView>
+
     <TextView
         android:id="@+id/textViewPopularCardsets"
         android:paddingTop="20dp"
