--- a/app/src/main/res/layout/tag_view.xml
+++ b/app/src/main/res/layout/tag_view.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    android:padding="2dp">
     <TextView
         android:id="@+id/textViewTagName"
         android:padding="2dp"
