--- a/app/src/main/res/layout/fragment_search_cardset.xml
+++ b/app/src/main/res/layout/fragment_search_cardset.xml
@@ -20,12 +20,12 @@
         android:layout_height="wrap_content"
         android:textSize="15dip"/>
 
-    <ScrollView
+    <HorizontalScrollView
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:scrollbars="none">
         <LinearLayout
             android:id="@+id/linearLayoutTags"
             android:layout_width="wrap_content"
@@ -34,7 +34,7 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </HorizontalScrollView>
 
     <TextView
         android:id="@+id/textViewPopularCardsets"
