--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,15 @@
             android:layout_gravity="center"
             android:id="@+id/fragment_flashcard_container">
         </com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>
+
+        <TextView
+            android:id="@+id/textViewNetworkState"
+            android:textColor="#e74848"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/string_poor_network"
+            android:visibility="gone"/>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
