--- a/app/src/main/res/layout/fragment_pick_opponent.xml
+++ b/app/src/main/res/layout/fragment_pick_opponent.xml
@@ -17,7 +17,8 @@
     <ListView
         android:id="@+id/listViewPickOpponent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="2dp">
     </ListView>
 
     <LinearLayout
