--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    android:padding="2dp">
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageViewAvatar"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/avatar"/>
-    <TextView
-        android:id="@+id/textViewName"
-        android:padding="2dp"
+    android:padding="10dp"
+    android:gravity="center_horizontal">
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Name"
-        android:layout_gravity="center_vertical"/>
+        android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageViewAvatar"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/avatar"
+            android:layout_marginRight="5dp"/>
+        <TextView
+            android:id="@+id/textViewName"
+            android:padding="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Name"
+            android:textSize="20sp"
+            android:layout_gravity="center_vertical"/>
+    </LinearLayout>
 </LinearLayout>
