--- a/app/src/main/res/layout/achievement_log_view.xml
+++ b/app/src/main/res/layout/achievement_log_view.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
     android:gravity="center"
+    android:layout_gravity="center_horizontal"
     android:padding="2dp">
     <ImageView
         android:id="@+id/imageViewAchievement"
