--- a/app/src/main/res/drawable/btn_dropshadow.xml
+++ b/app/src/main/res/drawable/btn_dropshadow.xml
@@ -152,7 +152,7 @@
             <!-- Background -->
             <item>
                 <shape>
-                    <solid android:color="#ebf1de" />
+                    <solid android:color="#fffde7" />
                     <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
                         android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
                 </shape>
