--- a/app/src/main/res/layout/activity_cardset_picker.xml
+++ b/app/src/main/res/layout/activity_cardset_picker.xml
@@ -12,7 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/colorMain">
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayoutCardsetPicker"
             android:layout_width="match_parent"
