--- a/app/src/main/res/layout/button_train.xml
+++ b/app/src/main/res/layout/button_train.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/string_main_menu_train"
-        android:textSize="30dp"
+        android:textSize="24dp"
         android:gravity="center|center_vertical"
         android:layout_gravity="center_vertical"/>
 
@@ -27,12 +27,13 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/ic_practice"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:alpha="0.7"/>
     </RelativeLayout>
 
 </FrameLayout>
