--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -9,10 +9,13 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="80dp"
-            android:src="@drawable/logo_title"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="32sp"
+            android:paddingBottom="30dp"/>
 
         <include layout="@layout/button_train"/>
 
