--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="colorBlack">#434343</color>
     <color name="colorDeselected">#c9c9c9</color>
     <color name="colorSelected">#b2fc92</color>
-    <color name="colorMain">#fffef0</color>
-    <color name="colorButton">#fffbcd</color>
+    <color name="colorMain">#fffef7</color>
+    <color name="colorButton">#cdfffa</color>
 </resources>
