--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -36,6 +36,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:gravity="right"
-            android:src="@drawable/ic_info"/>
+            android:src="@drawable/ic_info"
+            android:alpha="0.2"/>
     </LinearLayout>
 </RelativeLayout>
