- Implemented country flags

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorSelected">#b2fc92</color>
     <color name="colorMain">#fffef7</color>
     <color name="colorButton">#cdfffa</color>
+    <color name="colorBlind">#dcdcdc</color>
 </resources>
