--- a/app/src/main/res/layout/cardsetpicker_item.xml
+++ b/app/src/main/res/layout/cardsetpicker_item.xml
@@ -2,39 +2,96 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/textViewCardsetPickerItem"
-        android:textSize="18sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="right">
-        <TextView
-            android:id="@+id/textViewCardsetSearchLang"
-            android:textSize="12sp"
-            android:textColor="#cccccc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"/>
-        <TextView
-            android:id="@+id/textViewCardsetSearchLikes"
-            android:textSize="12sp"
-            android:textColor="#cccccc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"/>
-        <TextView
-            android:id="@+id/textViewCardsetSearchAuthor"
-            android:textSize="12sp"
-            android:textColor="#cccccc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"/>
-    </LinearLayout>
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/linearLayoutCountries"
+                android:layout_alignParentLeft="true">
+                <TextView
+                    android:id="@+id/textViewCardsetPickerItem"
+                    android:textSize="18sp"
+                    android:text="Countries and capitals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"/>
+            </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/linearLayoutCountries"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="right"
+                android:layout_alignParentRight="true">
+                <ImageView
+                    android:id="@+id/imageViewLangFrom"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/russia_flag"
+                    android:padding="2dp"
+                    android:alpha="0.5"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textColor="#c9c9c9"
+                    android:text="❯"/>
+                <ImageView
+                    android:id="@+id/imageViewLangTo"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/united_kingdom_flag"
+                    android:padding="2dp"
+                    android:alpha="0.5"/>
+            </LinearLayout>
+        </RelativeLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imageViewLike"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_like"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"/>
+                <TextView
+                    android:id="@+id/textViewCardsetSearchLikes"
+                    android:textSize="15sp"
+                    android:text="12"
+                    android:textColor="#cccccc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"/>
+                <TextView
+                    android:id="@+id/textViewDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Just now"
+                    android:textColor="@color/colorBlind"
+                    android:layout_gravity="left"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/textViewAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="James"
+                android:textColor="@color/colorBlind"
+                android:layout_gravity="right"/>
+        </FrameLayout>
+    </LinearLayout>
 
 </LinearLayout>
