--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,50 +39,69 @@
         </com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayoutEmoticons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_alignParentBottom="true"
-            android:visibility="gone"
             android:background="@color/colorMain">
             <ImageView
-                android:id="@+id/imageViewEmoticon1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_margin="4dp"
-                android:src="@drawable/emoticon1"/>
+                android:layout_marginRight="40dp"
+                android:visibility="invisible"
+                android:src="@drawable/ic_settings"/>
+            <LinearLayout
+                android:id="@+id/linearLayoutEmoticons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="invisible">
+                <ImageView
+                    android:id="@+id/imageViewEmoticon1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/emoticon1"/>
+                <ImageView
+                    android:id="@+id/imageViewEmoticon2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/emoticon2"/>
+                <ImageView
+                    android:id="@+id/imageViewEmoticon3"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/emoticon3"/>
+                <ImageView
+                    android:id="@+id/imageViewEmoticon4"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/emoticon4"/>
+                <ImageView
+                    android:id="@+id/imageViewEmoticon5"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/emoticon5"/>
+                <ImageView
+                    android:id="@+id/imageViewEmoticon6"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="4dp"
+                    android:src="@drawable/emoticon6"/>
+            </LinearLayout>
             <ImageView
-                android:id="@+id/imageViewEmoticon2"
+                android:id="@+id/imageViewSettings"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_margin="4dp"
-                android:src="@drawable/emoticon2"/>
-            <ImageView
-                android:id="@+id/imageViewEmoticon3"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/emoticon3"/>
-            <ImageView
-                android:id="@+id/imageViewEmoticon4"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/emoticon4"/>
-            <ImageView
-                android:id="@+id/imageViewEmoticon5"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/emoticon5"/>
-            <ImageView
-                android:id="@+id/imageViewEmoticon6"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_margin="4dp"
-                android:src="@drawable/emoticon6"/>
+                android:layout_marginLeft="40dp"
+                android:src="@drawable/ic_settings"/>
         </LinearLayout>
 
         <TextView
