--- a/app/src/main/res/layout/flashcard_header.xml
+++ b/app/src/main/res/layout/flashcard_header.xml
@@ -4,6 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imageViewQuestion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_image"
+        android:scaleType="fitXY"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
+
     <TextView
         android:id="@+id/textViewQuestion"
         android:layout_width="match_parent"
