--- a/app/src/main/res/layout/item_cardsetpicker.xml
+++ b/app/src/main/res/layout/item_cardsetpicker.xml
@@ -21,6 +21,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"/>
+                <ImageView
+                    android:id="@+id/imageViewHasImages"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/ic_image"
+                    android:visibility="gone"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"/>
             </LinearLayout>
 
             <LinearLayout
