- Implemented settings and cardset flagging

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorMain">#fffef7</color>
     <color name="colorButton">#cdfffa</color>
     <color name="colorBlind">#dcdcdc</color>
+    <color name="colorFlashcard">#ffd918</color>
 </resources>
