--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,14 @@
         </com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayoutBottomBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_alignParentBottom="true"
-            android:background="@color/colorMain">
+            android:background="@color/colorMain"
+            android:visibility="gone">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
